@@ -1,3 +1,4 @@
+* Add limitstyle with 'offset' and 'limit'
 * Add Lateral
 
 Version 0.6 - 2015-02-05
